--- a/2b.html
+++ b/2b.html
@@ -27,7 +27,6 @@
 </html>
 
 
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -37,23 +36,36 @@
     <h2>Engineering Branches</h2>
     <ul>
       <li>
-        <a href="https://en.wikipedia.org/wiki/Computer_science" target="main">CSE</a>
+        <a href="cse.html" target="main">CSE</a>
       </li>
       <li>
         <a
-          href="https://en.wikipedia.org/wiki/Electronic_engineering"target="main">ECE</a>
+          href="ece.html"target="main">ECE</a>
       </li>
       <li>
-        <a href="https://en.wikipedia.org/wiki/Civil_engineering" target="main">CV</a>
-      </li>
-      <li>
-        <a
-          href="https://en.wikipedia.org/wiki/Mechanical_engineering"target="main">MECH</a>
+        <a href="cv.html" target="main">CV</a>
       </li>
       <li>
         <a
-          href="https://en.wikipedia.org/wiki/Electrical_engineering"target="main">EE</a>
+          href="mech.html"target="main">MECH</a>
+      </li>
+      <li>
+        <a
+          href="ee.html"target="main">EE</a>
       </li>
     </ul>
   </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>CSE</title>
+</head>
+<body>
+  <h2>Computer Science Engineering</h2>
+  <p>Content about CSE.</p>
+</body>
+</html>
+
