--- a/4.html
+++ b/4.html
@@ -35,27 +35,26 @@
         <div class = "full">
             <div class = "left">
                 <img src="link" alt = "Profile pic" width = "50%" height = "25%">
-                <h1>Brahma Keerthi H S</h1>
+                <h1>Likhith D </h1>
                 <p>
                     A passionate Computer Science Student with the mindset of learning new Technology anytime.
                 </p>
                 <p>
                     <address>Address : SJCE Boys Hostel Mysore<br>Mysore - 570023</address>
                     Contact : +91 999062636<br>
-                    <address>Mail : brahmakeerthihs008@gmail.com</address>
-                    Github : <a href = "https://github.com/brahma-keerthi">https://github.com/brahma-keerthi</a>
+                    <address>Mail : Likhith008@gmail.com</address>
+                    Github : <a href = "https://github.com/likhith">https://github.com/likhith</a>
                 </p>
                 <h3>Skills</h3>
                 <ul>
                     <li>Programming Languages
                         <ul>
                             <li>C programming</li>
-                            <li>C++ programming</li>
                             <li>Java programming</li>
                             <li>Python programming</li>
                         </ul>
                     </li>
-                    <li>Android Development</li>
+                    <li>Web Development</li>
                 </ul>
                 <h3>Languages</h3>
                 <ul>
@@ -69,17 +68,17 @@
                 <div>
                     <h3>Education</h3>
                         <h4>JSS SCIENCE AND TECHNOLOGY UNIVERSITY</h4>
-                        <p>BE in Computer Science<br>Expected year of Graduation 2024<br>CGPA - 9.25</p>
-                        <h4>Brilliant PU College</h4>
-                        <p>Department of Pre-University Education<br>Passed year : 2020<br>Percentage - 91</p>
-                        <h4>Hassan Public School</h4>
-                        <p>Central Board of Secondary Education<br>Passed year : 2018<br>Percentage - 87.6</p>
+                        <p>BE in Computer Science<br>Expected year of Graduation 2025<br>CGPA - 9</p>
+                        <h4> SS PU College</h4>
+                        <p>Department of Pre-University Education<br>Passed year : 2021<br>Percentage - 94.6</p>
+                        <h4>Kalaptaru Central School</h4>
+                        <p>Central Board of Secondary Education<br>Passed year : 2019<br>Percentage - 85.8</p>
                 </div>
                 <div>
                     <h3>Projects</h3>
                     <div>
-                        <h4>Laboratory Mangement System</h4>
-                        <p>Roger Federer is the king of grass and  has been exceptional tennis player and is the GOAT with 20 grand slams championships.</p>
+                        <h4>Car price pridicting</h4>
+                        <p>used to predict the car prices by comparing KM,type of fuel,manufacture year.</p>
                     </div>
                     <div>
                         <h4>Hospital Mangement System</h4>
